will change property to fix flickering

--- a/src/styles/services.module.css
+++ b/src/styles/services.module.css
@@ -103,6 +103,8 @@
   position: absolute;
   top: 0;
   left: 0;
+
+  will-change: transform;
 }
 
 .sliderContainer {
